[tool.poetry]
name = "fastapi-jwt"
version = "0.1.0"
description = ""
authors = ["Alpha-Potat <luchinin.n@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"
fastapy = {extras = ["uvicorn"], version = "^1.0.3"}
pydantic = "^2.5.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
